fix arrows and horizontal scroll bug

--- a/src/entities/Lesson/ui/LessonCard/LessonCard.module.scss
+++ b/src/entities/Lesson/ui/LessonCard/LessonCard.module.scss
@@ -40,8 +40,8 @@
   }
   &__info {
     text-align: left;
-    width: 65%;
-    font-size: clamp(14px, 4vw, 18px);
+    width: 58%;
+    font-size: clamp(13px, 4vw, 18px);
     line-height: 1.6rem;
   }
 }
